@@ -1,3 +1,6 @@
+2003-07-21  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/MergeData.py: Various merge fixes.
+
 2003-07-21  Tim Waugh  <twaugh@redhat.com>
 	* src/RelLib.py: Made Person.probablyAlive() smarter.
 
